feat: add sharing feature
